Re-directing images to /pets and checking models before accepting forms